[gd_scene load_steps=16 format=3 uid="uid://bmvuifcpuv061"]

[ext_resource type="Script" path="res://Scripts/Multiplayer_Scripts/lobby.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://s4baw754xk74" path="res://audio/background/main.ogg" id="2"]
[ext_resource type="Texture2D" uid="uid://dib1w1judeeb2" path="res://UI/Menu_Sprites/background.png" id="3"]
[ext_resource type="FontFile" path="res://UI/Miscellaneous/Font.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://c5yrqg0lncfkt" path="res://UI/sprites/Domino Effect Logo.png" id="5"]
[ext_resource type="FontFile" uid="uid://dcgbqt5s40js7" path="res://UI/Fonts/Nunito/Nunito-Regular.ttf" id="6"]
[ext_resource type="PackedScene" uid="uid://cyb1ooqucssw0" path="res://Scenes/Level_Scenes/LevelSelect.tscn" id="7"]
[ext_resource type="FontFile" path="res://addons/gdUnit3/src/update/assets/fonts/RobotoMono-h5.tres" id="8"]
[ext_resource type="Script" path="res://Scripts/Menu_Scripts/Menu.gd" id="9"]
[ext_resource type="Script" path="res://Scripts/Menu_Scripts/Checklist.gd" id="11"]
[ext_resource type="PackedScene" path="res://Scenes/LoadButton.tscn" id="12"]

[sub_resource type="FontFile" id="5"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([SubResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("9")

[node name="MenuLayout" type="CanvasLayer" parent="."]
process_priority = 1

[node name="Checklist" type="Control" parent="."]
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1026.0
offset_bottom = 601.0
mouse_filter = 1
script = ExtResource("11")

[node name="CanvasLayer" type="CanvasLayer" parent="Checklist"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Checklist/CanvasLayer"]
position = Vector2(0, 1)
color = Color(0.576471, 0.709804, 0.486275, 1)
polygon = PackedVector2Array(99, 154, 1022, 157, 1024, 599, 98, 599)

[node name="VBoxContainer" type="VBoxContainer" parent="Checklist/CanvasLayer/Polygon2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="add_item" type="Button" parent="Checklist/CanvasLayer/Polygon2D"]
offset_left = 142.0
offset_top = 267.0
offset_right = 214.0
offset_bottom = 287.0
text = "Add Item"

[node name="Window" type="Window" parent="Checklist/CanvasLayer/Polygon2D/add_item"]
position = Vector2i(0, 36)

[node name="MarginContainer" type="MarginContainer" parent="Checklist/CanvasLayer/Polygon2D/add_item/Window"]
offset_left = 9.0
offset_top = 14.0
offset_right = 334.0
offset_bottom = 137.0

[node name="VBoxContainer" type="VBoxContainer" parent="Checklist/CanvasLayer/Polygon2D/add_item/Window/MarginContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Checklist/CanvasLayer/Polygon2D/add_item/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6

[node name="Confirm" type="Button" parent="Checklist/CanvasLayer/Polygon2D/add_item/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Confirm"

[node name="remove_item" type="CheckBox" parent="Checklist/CanvasLayer/Polygon2D"]
offset_left = 239.0
offset_top = 267.0
offset_right = 354.0
offset_bottom = 291.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0196078, 0.0156863, 0.0156863, 1)
text = "Remove Item"

[node name="Label" type="Label" parent="Checklist/CanvasLayer/Polygon2D"]
offset_left = 336.0
offset_top = 177.0
offset_right = 852.0
offset_bottom = 245.0
size_flags_stretch_ratio = 9.4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("6")
text = "Community Checklist"

[node name="Lobby" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="Lobby"]
layer = -1
follow_viewport_enabled = true

[node name="TextureRect" type="TextureRect" parent="Lobby/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -152.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3")
expand_mode = 1

[node name="TitleBox" type="Panel" parent="Lobby"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("2")

[node name="Title" type="Sprite2D" parent="Lobby/TitleBox"]
position = Vector2(20.76, 7)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5")

[node name="Players" type="Panel" parent="Lobby"]
layout_mode = 0
anchor_left = 0.675
anchor_top = 0.5
anchor_right = 0.775
anchor_bottom = 0.5
offset_left = 636.0
offset_top = 85.0
offset_right = 888.0
offset_bottom = 440.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Lobby/Players"]
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 142.0
offset_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Lobby/Players"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Lobby/Players"]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.125
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="FindPublicIP" type="Label" parent="Lobby/Players"]
layout_mode = 0
offset_left = 1.5
offset_top = -50.5
offset_right = 245.5
offset_bottom = -1.5
theme_override_fonts/font = SubResource("1")
text = "IP: "

[node name="Connect" type="Panel" parent="Lobby"]
layout_mode = 0
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 87.2
offset_top = -100.0
offset_right = 487.2
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("2")

[node name="NameLabel" type="Label" parent="Lobby/Connect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -20.0
offset_right = 20.0
grow_horizontal = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("8")
text = "Name:"
horizontal_alignment = 3
vertical_alignment = 3

[node name="IPLabel" type="Label" parent="Lobby/Connect"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("8")
text = "Host Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartBox" type="Panel" parent="Lobby/Connect"]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("2")

[node name="Name" type="LineEdit" parent="Lobby/Connect/StartBox"]
layout_mode = 0
offset_right = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("4")
text = "Player"

[node name="Host" type="Button" parent="Lobby/Connect/StartBox"]
layout_mode = 0
anchor_left = 0.75
anchor_right = 1.0
offset_top = 2.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="ErrorLabel" type="Label" parent="Lobby/Connect"]
layout_mode = 0
offset_left = 105.2
offset_top = 189.0
offset_right = 347.2
offset_bottom = 203.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)
horizontal_alignment = 1

[node name="JoinBox" type="Panel" parent="Lobby/Connect"]
layout_mode = 0
anchor_left = 0.125
anchor_top = 0.7
anchor_right = 0.875
anchor_bottom = 0.7
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("2")

[node name="IPAddress" type="LineEdit" parent="Lobby/Connect/JoinBox"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host Name"

[node name="Join" type="Button" parent="Lobby/Connect/JoinBox"]
layout_mode = 0
anchor_left = 0.75
anchor_right = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorDialog" type="AcceptDialog" parent="Lobby"]
position = Vector2i(0, 36)
visible = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lobby"]
stream = ExtResource("2")
autoplay = true

[node name="LevelSelect" parent="Lobby" instance=ExtResource("7")]

[node name="Node" type="Node" parent="Lobby"]

[node name="LoadButton" parent="Lobby" instance=ExtResource("12")]
position = Vector2(771, 50)

[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/add_item" to="Checklist" method="_on_add_item_pressed"]
[connection signal="text_changed" from="Checklist/CanvasLayer/Polygon2D/add_item/Window/MarginContainer/VBoxContainer/LineEdit" to="Checklist" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/add_item/Window/MarginContainer/VBoxContainer/Confirm" to="Checklist" method="_on_Confirm_pressed"]
[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/remove_item" to="Checklist" method="_on_remove_item_pressed"]
[connection signal="pressed" from="Lobby/Players/Start" to="Lobby" method="_on_start_pressed"]
[connection signal="pressed" from="Lobby/Connect/StartBox/Host" to="Lobby" method="_on_host_pressed"]
[connection signal="pressed" from="Lobby/Connect/JoinBox/Join" to="Lobby" method="_on_join_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level1" to="Lobby" method="_on_Level1_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level2" to="Lobby" method="_on_Level2_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level3" to="Lobby" method="_on_Level3_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level4" to="Lobby" method="_on_Level4_pressed"]

[editable path="Lobby/LevelSelect"]
